# The_Practice_of_Classical_Quantitative_Strategies

./: BOLL_Strategy.ipynb  GC=F_historical_data.csv  MACD_Strategy.ipynb  Momentum_Strategy.ipynb  RSI_Strategy.ipynb  SMA_ATR_Strategy.py  SMA_Opt_Strategy.py  SMA_Strategy.ipynb  download_data.ipynb  main.py  pyproject.toml  test.ipynb  test.py
