[project]
name = "Quant_Trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtrader>=1.9.78.123",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "ipywidgets>=7.6",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "scipy>=1.16.1",
    "ta-lib>=0.6.5",
    "yfinance>=0.2.65",
]
